# backend-business-intelligence

./: FLUTTER_INTEGRACAO_ENDPOINTS.md  README.md  START_DOCKER.bat  START_E_MIGRAR.bat  STATUS_ATUAL_PROJETO_2026-07-11.md  TEST_SYNC.bat  docker-compose.yml
backend/: .alembic_current.txt  .alembic_upgrade.txt  .dockerignore  .env.docker  .env.example  Dockerfile  EXECUTAR_MIGRATION.bat  EXECUTAR_MIGRATION.py  README.md  alembic.ini  check_routes.py  provider_config.yaml  pyproject.toml  run_migration.py  synchronization.yaml  test_endpoints.py  test_sync_api.py
backend/alembic/: README  env.py
backend/app/: main.py
backend/demo/: README.md  accounts_payable.csv  accounts_receivable.csv  balance_sheet.csv  cashflow.csv  hr.csv  income_statement.csv  inventory.csv  sales.csv
backend/docs/: TESTE_OMIE_SYNC.md  TESTE_RAPIDO.md  adr-0001-shared-kernel-v1.1.md  auth-engine-v1.md  business-customer-aggregate.md  business-product-aggregate.md  business-rules-catalog-v1.md  canonical-data-model-v2.md  docker-dev-setup-v1.md  formula-dsl-v2.md  gate-review-productaggregate-v1.md  import-engine-v2.md  integration-hub.md  kpi-catalog-v1.md  kpi-catalogo-oficial-v1.md  platform-evolution-v1.1-architecture.md  platform-evolution-v1.1-before-after.md  platform-evolution-v1.1-impact-report.md  production-readiness-customeraggregate-v1.md  production-readiness-productaggregate-v1.md  rfc-kpi-engine-v1.md  rfc-platform-evolution-v1.1.md  rfc-productaggregate-v1.md  rfc-rule-engine-v1.md  status-servidor-visao-plataforma-v1.md  synchronization-orchestrator.md
(+442 files in other folders)
