[project]
name = "bi-backend"
version = "0.1.0"
description = "FastAPI backend for multi-tenant BI SaaS platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic-settings>=2.10.0",
  "email-validator>=2.2.0",
  "sqlalchemy>=2.0.42",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.16.0",
  "python-jose[cryptography]>=3.5.0",
  "passlib[bcrypt]>=1.7.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "httpx>=0.28.0",
  "ruff>=0.12.0",
  "mypy>=1.17.0"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
